--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="card">
         <img src="Intidhar.jpg" alt="Logo" style="width: 80px; height: auto; margin-bottom: 1rem;">
 
-        <h3>Week 1 · Introduction</h3>
+        <h3>Week 1 · Imam al-Mahdi (AS( </h3>
         <p>This section introduces Al-Intidhar, explains why being a true Muntadhir matters, and teaches the core ideas of readiness, devotion, and preparation for Imam al-Mahdi’s appearance.</p>
         <div class="links">
           <a href="#">🎥 Video</a>
