--- a/index.html
+++ b/index.html
@@ -132,14 +132,17 @@
       <!-- WEEK 1 -->
       <div class="card">
         <img src="Intidhar.jpg" alt="Logo" style="width: 80px; height: auto; margin-bottom: 1rem;">
-
-        <h3>Week 1 · Imam al-Mahdi (AS( </h3>
-        <p>This section introduces Al-Intidhar, explains why being a true Muntadhir matters, and teaches the core ideas of readiness, devotion, and preparation for Imam al-Mahdi’s appearance.</p>
+      
+        <h3>Week 1 · Imam al-Mahdi (AS)</h3>
+        <p>This section introduces <strong>Al-Intizar</strong> (waiting), explains why being a true <strong>Muntazir</strong> matters, and teaches the core principles of readiness, devotion, and active preparation for the appearance of Imam al-Mahdi (may Allah hasten his reappearance).</p>
+        
         <div class="links">
           <a href="#">🎥 Video</a>
           <a class="secondary" href="#">📄 Slides</a>
+          <a class="secondary" href="Imam_AlMahdi_Lesson1_8Feb26.pdf" target="_blank">📄 PDF Lesson</a>
         </div>
       </div>
+
 
       <!-- WEEK 2 -->
       <div class="card">
