--- a/index.html
+++ b/index.html
@@ -131,15 +131,17 @@
 
       <!-- WEEK 1 -->
       <div class="card">
-        <img src="Intidhar.jpg" alt="Logo" style="width: 80px; height: auto; margin-bottom: 1rem;">
+        <img src="Intidhar.jpg" alt="Logo" style="width: 100px; height: auto; margin-bottom: 1rem;">
       
-        <h3>Week 1 · Imam al-Mahdi (AS)</h3>
+        <h3>Week 1 · Imam al-Mahdi (AS) [8/02/2026] </h3>
         <p>This section introduces <strong>Al-Intizar</strong> (waiting), explains why being a true <strong>Muntazir</strong> matters, and teaches the core principles of readiness, devotion, and active preparation for the appearance of Imam al-Mahdi (may Allah hasten his reappearance).</p>
         
         <div class="links">
           <a href="#">🎥 Video</a>
           <a class="secondary" href="#">📄 Slides</a>
-          <a class="secondary" href="Imam_AlMahdi_Lesson1_8Feb26.pdf" target="_blank">📄 PDF Lesson</a>
+          <a class="secondary" href="Imam_AlMahdi_Lesson1_8Feb26.pdf" target="_blank">📄 Class Resource</a>
+          <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resource</a>
+
         </div>
       </div>
 
