--- a/index.html
+++ b/index.html
@@ -132,19 +132,16 @@
       <!-- WEEK 1 -->
       <div class="card">
         <img src="Intidhar.jpg" alt="Logo" style="width: 100px; height: auto; margin-bottom: 1rem;">
-              
-      <div class="card">
-        <h3>Week 1 · Introduction</h3>
         <p>This section introduces <strong>Al-Intizar</strong> (waiting), explains why being a true <strong>Muntazir</strong> matters, and teaches the core principles of readiness, devotion, and active preparation for the appearance of Imam al-Mahdi (may Allah hasten his reappearance).</p>
         <div class="links">
           <a class="secondary" href="#">📄 Slides</a>
           <a class="secondary" href="Imam_AlMahdi_Lesson1_8Feb26.pdf" target="_blank">📄 Class Resource</a>
           <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resource</a>
+          <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resource</a>
         </div>
-
         <!-- YouTube Video Embed -->
         <div class="video-container" style="margin-bottom: 1rem;">
-          <iframe width="50%" height="150" 
+          <iframe width="25%" height="100" 
                   src="https://www.youtube.com/embed/FZWwLWRZS3Y" 
                   title="YouTube video player" 
                   frameborder="0" 
