--- a/index.html
+++ b/index.html
@@ -212,7 +212,10 @@
           <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resource</a>
           <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resource</a>
         </div>
-
+        <div class="card">
+          <h3>Week 1 Quiz</h3>
+          <iframe src="YOUR_GOOGLE_FORM_EMBED_LINK" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div
         <!-- YouTube Video row -->
         <div class="video-container">
           <iframe width="100%" height="300" 
@@ -227,8 +230,44 @@
 
       <!-- WEEK 2 -->
       <div class="card">
-        <h3>Week 2 · Core Concepts</h3>
-        <p>Deep dive into key principles and examples.</p>
+        <!-- Card Header -->
+        <div class="card-header">Week 2 · 15 Feb 2026 · Topic: Understanding Taqlīd and Taklīf, and Preparing for the Month of Ramadhan</div>
+
+        <!-- Top row: Logo + Text -->
+        <div class="card-top">
+          <img src="taqlid_taklif.jpg" alt="Logo" class="card-logo">
+          <p class="card-text">
+          This section introduces <strong>Taqlīd</strong> (following religious authority) and <strong>Taklīf</strong>, explains why understanding both is essential, and teaches the core principles of awareness, accountability, and spiritual readiness while preparing for the blessed month of <strong>Ramadhan</strong>.
+          </p>
+        </div>
+
+        <!-- Links & Resources row -->
+        <div class="card-links">
+          <a class="secondary" href="#">📄 Slides</a>
+          <a class="secondary" href="Imam_AlMahdi_Lesson1_8Feb26.pdf" target="_blank">📄 Class Resource</a>
+          <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resource</a>
+          <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resource</a>
+        </div>
+        <div class="card">
+          <h3>Week 1 Quiz</h3>
+          <iframe src="YOUR_GOOGLE_FORM_EMBED_LINK" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div
+        <!-- YouTube Video row -->
+        <div class="video-container">
+          <iframe width="100%" height="300" 
+                  src="https://www.youtube.com/embed/FZWwLWRZS3Y" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                  allowfullscreen>
+          </iframe>
+        </div>
+      </div>
+
+      <!-- WEEK 2 -->
+      <div class="card">
+        <div class="card-header">Week 2 · 15 Feb 2026 · Topic: Understanding Taqlīd and Taklīf, and Preparing for the Month of Ramadhan</div>
+        This section introduces <strong>Taqlīd</strong> (following religious authority) and <strong>Taklīf</strong>, explains why understanding both is essential, and teaches the core principles of awareness, accountability, and spiritual readiness while preparing for the blessed month of <strong>Ramadhan</strong>.
         <div class="links">
           <a href="#">🎥 Video</a>
           <a class="secondary" href="#">📄 Notes</a>
