--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
         <!-- Links & Resources row -->
         <div class="card-links">
           <a class="secondary" href="#">📄 Slides</a>
-          <a class="secondary" href="Imam_AlMahdi_Lesson1_8Feb26.pdf" target="_blank">📄 Class Resource</a>
-          <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resource</a>
-          <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resource</a>
+          <a class="secondary" href="Imam_AlMahdi_Lesson1_8Feb26.pdf" target="_blank">📄 Class Resources</a>
+          <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resources</a>
+          <a class="secondary" href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s" target="_blank">🎥 Who Is Imam Mehdi (AS) </a>
         </div>
         <div class="card">
           <h3>Week 1 Quiz</h3>
-          <iframe src="YOUR_GOOGLE_FORM_EMBED_LINK" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          <iframe src="https://forms.gle/UuRiBwHendDBb1bh7" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div
         <!-- YouTube Video row -->
         <div class="video-container">
