--- a/index.html
+++ b/index.html
@@ -210,23 +210,13 @@
           <a class="secondary" href="#">📄 Slides</a>
           <a class="secondary" href="Imam_AlMahdi_Lesson1_8Feb26.pdf" target="_blank">📄 Class Resources</a>
           <a class="secondary" href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age" target="_blank">🌐 Additional Resources</a>
+          <a class="secondary" href="https://forms.gle/UuRiBwHendDBb1bh7" target="_blank">📄 Term1-Week1 Quiz(AS) </a>
+
           <a class="secondary" href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s" target="_blank">🎥 Who Is Imam Mehdi (AS) </a>
         </div>
         <div class="card">
           <h3>Week 1 Quiz</h3>
           <iframe src="https://forms.gle/UuRiBwHendDBb1bh7" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        </div
-        <!-- YouTube Video row -->
-        <div class="video-container">
-          <iframe width="100%" height="300" 
-                  src="https://www.youtube.com/embed/FZWwLWRZS3Y" 
-                  title="YouTube video player" 
-                  frameborder="0" 
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                  allowfullscreen>
-          </iframe>
-        </div>
-      </div>
 
       <!-- WEEK 2 -->
       <div class="card">
