--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <a href="#">Class Resources</a>
         <a href="#">Quiz</a>
         <a href="#">Additional Resources</a>
-        <a href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 Who is Imam Mahdi</a>
+        <a href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 TBA</a>
 
 
       </div>
@@ -181,9 +181,25 @@
         <a href="#">Class Resources</a>
         <a href="#">Quiz</a>
         <a href="#">Additional Resources</a>
-        <a href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 Who is Imam Mahdi</a>      </div>
+        <a href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 TBA</a>      </div>
     </div>
 
+    <!-- WEEK 4 TBA -->
+    <div class="card">
+      <div class="card-header">Term1-Week 3 · Coming Soon</div>
+      <div class="card-top">
+        <img src="taqlid_taklif.jpg" class="card-logo" alt="">
+        <p class="card-text">Content will be uploaded soon.</p>
+      </div>
+      <div class="card-links">
+        <a href="#">Slides</a>
+        <a href="#">Class Resources</a>
+        <a href="#">Quiz</a>
+        <a href="#">Additional Resources</a>
+        <a href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 TBA</a>      </div>
+    </div>
+
+    
   </section>
 </main>
 
