--- a/index.html
+++ b/index.html
@@ -132,12 +132,11 @@
 
     <!-- WEEK 1 -->
     <div class="card">
-      <div class="card-header">Term1-Week 1 · 8 Feb 2026 · Imam al-Mahdi (AS)</div>
+      <div class="card-header">Term1 - Week 1 · 7 Feb 2026 [18th Sha'ban 1447] · Imam al-Mahdi (AS)</div>
       <div class="card-top">
         <img src="Intidhar.jpg" class="card-logo" alt="">
         <p class="card-text">
-        This section introduces <strong>Al-Intizar</strong> (waiting), explains why being a true <strong>Muntazir</strong> matters, and teaches the core principles of readiness, devotion, and active preparation for the appearance of Imam al-Mahdi (may Allah hasten his reappearance).
-        </p>
+        Learn about <strong>Al-Intizar</strong>, the role of a true <strong>Muntazir</strong>, and how to prepare for Imam al-Mahdi (AS).        </p>
       </div>
       <div class="card-links">
         <a href="#">Slides</a>
@@ -151,19 +150,18 @@
 
     <!-- WEEK 2 -->
     <div class="card">
-      <div class="card-header">Term 1-Week 2 · 15 Feb 2026 · Taqlīd & Taklīf</div>
+      <div class="card-header">Term 1-Week 2 · 14 Feb 2026 [25th Sha'ban 1447]  · Taqlīd & Taklīf</div>
       <div class="card-top">
         <img src="taqlid_taklif.jpg" class="card-logo" alt="">
         <p class="card-text">
-          This section introduces <strong>Taqlīd</strong> (following religious authority) and <strong>Taklīf</strong>, explains why understanding both is essential, and teaches the core principles of awareness, accountability, and spiritual readiness while preparing for the blessed month of <strong>Ramadhan</strong>.
-        </p>
+        Learn about <strong>Taqlīd</strong> and <strong>Taklīf</strong> and how to prepare spiritually for Ramadhan.</p>
       </div>
       <div class="card-links">
         <a href="#">Slides</a>
         <a href="#">Class Resources</a>
         <a href="#">Quiz</a>
-        <a href="#">Additional Resources</a>
-        <a href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 TBA</a>
+        <a href="https://al-islam.org/articles/taqlid-meaning-and-reality-sayyid-muhammad-rizvi">Additional Resources</a>
+        <a href="https://www.youtube.com/watch?v=mKdyH-w8j44">🎥 Ijtihad and Taqleed</a>
 
 
       </div>
@@ -171,7 +169,7 @@
 
     <!-- WEEK 3 TBA -->
     <div class="card">
-      <div class="card-header">Term1-Week 3 · Coming Soon</div>
+      <div class="card-header">Term1 - Week 3 · 21 Feb[3rd Ramadan 1447] · Coming Soon</div>
       <div class="card-top">
         <img src="taqlid_taklif.jpg" class="card-logo" alt="">
         <p class="card-text">Content will be uploaded soon.</p>
@@ -186,7 +184,7 @@
 
     <!-- WEEK 4 TBA -->
     <div class="card">
-      <div class="card-header">Term1-Week 3 · Coming Soon</div>
+      <div class="card-header">Term1 - Week 4 · 28 Feb[10th Ramadan 1447]· Coming Soon</div>
       <div class="card-top">
         <img src="taqlid_taklif.jpg" class="card-logo" alt="">
         <p class="card-text">Content will be uploaded soon.</p>
