--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         Learn about <strong>Al-Intizar</strong>, the role of a true <strong>Muntazir</strong>, and how to prepare for Imam al-Mahdi (AS).        </p>
       </div>
       <div class="card-links">
-        <a href="#">Slides</a>
+        <a href="#">Slides</a>   
         <a href="Imam_AlMahdi_Lesson1_8Feb26.pdf">Class Resources</a>
         <a href="https://forms.gle/UuRiBwHendDBb1bh7">Quiz</a>
         <a href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age">Additional Resources</a>
@@ -158,7 +158,8 @@
       </div>
       <div class="card-links">
         <a href="#">Slides</a>
-        <a href="#">Class Resources</a>
+        <a href="https://https://youtu.be/fbUw52fkS_o">🎥 Quick Revision of Lesson</a>
+        <a href="Ijtihad_Taklif_Lesson2_14Feb26.pdf">Class Resources</a>
         <a href="#">Quiz</a>
         <a href="https://al-islam.org/articles/taqlid-meaning-and-reality-sayyid-muhammad-rizvi">Additional Resources</a>
         <a href="https://www.youtube.com/watch?v=mKdyH-w8j44">🎥 Ijtihad and Taqleed</a>
