--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         Learn about <strong>Taqlīd</strong> and <strong>Taklīf</strong> and how to prepare spiritually for Ramadhan.</p>
       </div>
       <div class="card-links">
-        <a href="#">Slides</a>
-        <a href="Week2_Lesson2_Summary.png">🎥 Lesson Infographic</a>
+        <a href="Taqlid_Taklif_and_The_Map_to_Perfection.pdf">Slides</a>
+        <a href="Week2_Lesson2_Summary.png"> Lesson Infographic</a>
         <a href="https://https://youtu.be/fbUw52fkS_o">🎥 Quick Revision of Lesson</a>
         <a href="Ijtihad_Taklif_Lesson2_14Feb26.pdf">Class Resources</a>
         <a href="#">Quiz</a>
