--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
       </div>
       <div class="card-links">
         <a href="#">Slides</a>   
+        <a href="Week2_Lesson2_Summary.png"> Lesson Infographic</a>
+        <a href="https://https://youtu.be/fbUw52fkS_o">🎥 Quick Revision of Lesson</a>
         <a href="Imam_AlMahdi_Lesson1_8Feb26.pdf">Class Resources</a>
         <a href="https://forms.gle/UuRiBwHendDBb1bh7">Quiz</a>
         <a href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age">Additional Resources</a>
@@ -152,7 +154,7 @@
     <div class="card">
       <div class="card-header">Term 1-Week 2 · 14 Feb 2026 [25th Sha'ban 1447]  · Taqlīd & Taklīf</div>
       <div class="card-top">
-        <img src="taqlid_taklif.jpg" class="card-logo" alt="">
+        <img src="Week2_Lesson2_Summary.png" class="card-logo" alt="">
         <p class="card-text">
         Learn about <strong>Taqlīd</strong> and <strong>Taklīf</strong> and how to prepare spiritually for Ramadhan.</p>
       </div>
