--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <a href="Ijtihad_Taklif_Lesson2_14Feb26.pdf">Class Resources</a>
         <a href="#">Quiz</a>
         <a href="https://al-islam.org/articles/taqlid-meaning-and-reality-sayyid-muhammad-rizvi">Additional Resources</a>
-        <a href="https://https://www.youtube.com/watch?v=gtOVyqpe0xM>🎥 Ijtihad and Taqleed</a>
+        <a href="https://https://www.youtube.com/watch?v=gtOVyqpe0xM">🎥 Ijtihad and Taqleed</a>
       </div>
     </div>
 
