--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
       </div>
       <div class="card-links">
         <a href="Active_Anticipation.pdf">Slides</a>   
-        <a href="Intidhar_AlMahdi.png">Lesson Infographic</a>
+        <a href="Week2_Lesson2_Summary.png">Lesson Infographic</a>
         <a href="https://youtu.be/fbUw52fkS_o">🎥 Quick Revision</a>
         <a href="Imam_AlMahdi_Lesson1_8Feb26.pdf">Class Resources</a>
         <a href="https://forms.gle/UuRiBwHendDBb1bh7">Quiz</a>
         <a href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age">Additional Resources</a>
-        <a href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 Who is Imam Mahdi</a>
+        <a href="https://youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 Who is Imam Mahdi</a>
       </div>
     </div>
 
@@ -172,7 +172,7 @@
         <a href="Ijtihad_Taklif_Lesson2_14Feb26.pdf">Class Resources</a>
         <a href="#">Quiz</a>
         <a href="https://al-islam.org/articles/taqlid-meaning-and-reality-sayyid-muhammad-rizvi">Additional Resources</a>
-        <a href="https://www.youtube.com/watch?v=gtOVyqpe0xM">🎥 Ijtihad and Taqleed</a>
+        <a href="https://youtube.com/watch?v=gtOVyqpe0xM">🎥 Ijtihad and Taqleed</a>
       </div>
     </div>
 
@@ -188,7 +188,7 @@
         <a href="#">Class Resources</a>
         <a href="#">Quiz</a>
         <a href="#">Additional Resources</a>
-        <a href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 TBA</a>      
+        <a href="https://youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 TBA</a>      
       </div>
     </div>
 
@@ -204,7 +204,7 @@
         <a href="#">Class Resources</a>
         <a href="#">Quiz</a>
         <a href="#">Additional Resources</a>
-        <a href="https://www.youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 TBA</a>      
+        <a href="https:/youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 TBA</a>      
       </div>
     </div>
 
