--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
       </div>
       <div class="card-links">
         <a href="Active_Anticipation.pdf">Slides</a>   
-        <a href="Week2_Lesson2_Summary.png">Lesson Infographic</a>
-        <a href="https://youtu.be/fbUw52fkS_o">🎥 Quick Revision</a>
+        <a href="Week1_Intedhar_Infographics.png">Lesson Infographic</a>
+        <a href="https://youtu.be/erjdUmeGgUA">🎥 Quick Revision</a>
         <a href="Imam_AlMahdi_Lesson1_8Feb26.pdf">Class Resources</a>
         <a href="https://forms.gle/UuRiBwHendDBb1bh7">Quiz</a>
         <a href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age">Additional Resources</a>
