--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
       <div class="card-links">
         <a href="Active_Anticipation.pdf">Slides</a>   
-        <a href="Week1_Intedhar_Infographics.png">Lesson Infographic</a>
+        <a href="Week1_Intedhar_Infographics.jpeg">Lesson Infographic</a>
         <a href="https://youtu.be/erjdUmeGgUA">🎥 Quick Revision</a>
         <a href="Imam_AlMahdi_Lesson1_8Feb26.pdf">Class Resources</a>
         <a href="https://forms.gle/UuRiBwHendDBb1bh7">Quiz</a>
