--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 <h1>Fatima Zahra Islamic School</h1>
 <h2>Intermediate Class – Weekly Lessons</h2>
 </header>
+
+<!-- Academic Calendar Section -->
+<div class="calendar-box">
+<h3>📅 Academic Calendar – Term 1</h3>
+<p>View important dates, holidays, and key learning milestones for this term.</p>
+<a href="FZIS calendar 2026.pdf" target="_blank">Open Academic Calendar (PDF)</a>
+</div>
+
+<main>
+<section class="grid">
 <main>
 <section class="grid">
 
