--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 </head>
 <body>
 <header>
-<img src="FZIS_logo.jpg" style="width:150px;margin-bottom:1rem" alt="FZIS Logo">
+<img src="FZIS_logo.jpg" style="width:130px;margin-bottom:1rem" alt="FZIS Logo">
 <h1>Fatima Zahra Islamic School</h1>
 <h2>Intermediate Class – Weekly Lessons</h2>
-</header>
 
 <!-- Academic Calendar Section -->
 <div class="calendar-box">
@@ -43,6 +42,8 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 <p>View important dates, holidays, and key learning milestones for this term.</p>
 <a href="FZIS calendar 2026.pdf" target="_blank">Open Academic Calendar (PDF)</a>
 </div>
+</header>
+
 <main>
 <section class="grid">
 
@@ -62,8 +63,7 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 <a href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age">Additional Resources</a>
 <a href="https://youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 Who is Imam Mahdi</a>
 </div>
-<div class="card-parents"><span>Parents Resources (Share stories with your children):</span><a href="https://youtu.be/InA6t_MdX94"> Imam Al-Mahdi (AS): The Awaited Reality [Sumamarized through lectures of Syed Abid Hussain Zaidi]</a></div>
-<div class="card-parents"><span>Parents Resources (Share stories with your children):</span><a href="https://youtu.be/a-ZVMdG8H5E?si=_VNCBVXznm4aXrQD"> Imam Al-Mahdi (AS): Miraculous Birth of Imam Al-Mahdi (ajtf) Explained — Shaikh Azhar Nasser </a></div>
+<div class="card-parents"><span>Parents Resources (Share stories with your children):</span><a href="https://youtu.be/InA6t_MdX94"> Imam Al-Mahdi (AS): The Awaited Reality [Sumamarized through lectures of Syed Abid Hussain Zaidi]</a><a href="https://youtu.be/a-ZVMdG8H5E?si=_VNCBVXznm4aXrQD"> Imam Al-Mahdi (AS): Miraculous Birth of Imam Al-Mahdi (ajtf) Explained — Shaikh Azhar Nasser </a></div>
 </div>
 
 <!-- WEEK 2 -->
