--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 <a href="https://youtu.be/fbUw52fkS_o">🎥 Quick Revision</a>
 <a href="Ijtihad_Taklif_Lesson2_14Feb26.pdf">Class Resources</a>
 <a href="#">Quiz</a>
-<a href="https://al-islam.org/articles/taqlid-meaning-and-reality-sayyid-muhammad-rizvi">Additional Resources</a>
+<a href="https://al-islam.org/simplified-islamic-laws-youth-and-young-adults-sayyid-ali-hussaini-sistani/ijtihad-and-taqlid">Additional Resources</a>
 <a href="https://youtube.com/watch?v=gtOVyqpe0xM">🎥 Ijtihad and Taqleed</a>
 </div>
-<div class="card-parents"><span>Parents Resources:</span><a href="#">Coming Soon</a></div>
+<div class="card-parents"><span>Parents Resources:</span><a href="https://al-islam.org/articles/taqlid-meaning-and-reality-sayyid-muhammad-rizvi">Ijtihad and Taqlid [https://al-islam.org/]/a><a href="https://www.sistani.org/english/qa/">Q & A [Grand Ayatollah Sayyid Ali al-Husayni al-Sistani (born 1930)]/a></div>
 </div>
 
 <!-- WEEK 3 -->
