--- a/index.html
+++ b/index.html
@@ -81,27 +81,29 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 <a href="https://al-islam.org/simplified-islamic-laws-youth-and-young-adults-sayyid-ali-hussaini-sistani/ijtihad-and-taqlid">Additional Resources</a>
 <a href="https://youtube.com/watch?v=gtOVyqpe0xM">🎥 Ijtihad and Taqleed</a>
 </div>
-<div class="card-parents"><span>Parents Resources:</span><a href="https://al-islam.org/articles/taqlid-meaning-and-reality-sayyid-muhammad-rizvi"> Ijtihad and Taqlid [https://al-islam.org/] </a><a href="https://www.sistani.org/english/qa/"> Q & A [Grand Ayatollah Sayyid Ali al-Husayni al-Sistani (born 1930)]</a></div>
-
+<div class="card-parents"><span>Parents Resources:</span><a href="https://al-islam.org/fasting-and-holy-month-ramadhan-mansour-leghaei/ramadhan-awareness"> Ramadhan Awareness</a><a href="https://al-islam.org/fasting-ramadhan-simple-guide-ritual-social-spiritual-dimensions-sayyid-muhammad-rizvi/prophets"> The Prophet’s (SAW) Sermon Welcoming the Month of Ramadhan</a> </div>
 </div>
 
 <!-- WEEK 3 -->
 <div class="card">
 <div class="card-header">Term 1 - Week 3 · 21 Feb [3rd Ramadan 1447] · Ramadan: A Spiritual Training for the Soul</div>
 <div class="card-top">
-<img src="taqlid_taklif.jpg" class="card-logo" alt="Coming Soon">
-<p class="card-text">Content will be uploaded soon.</p>
+<img src="Week2_Lesson2_Summary.png" class="card-logo" alt="Ramadan: A Spiritual Training for the Soul">
+<p class="card-text">Explore how <strong>Ramadan</strong> serves as a <strong>spiritual training for the soul</strong>, nurturing patience, reflection, and closeness to Allah.</p>
 </div>
 <div class="card-links">
 <a href="#">Slides</a>
+<a href="#">Lesson Infographic</a>
+<a href="#">🎥 Quick Revision</a>
 <a href="#">Class Resources</a>
 <a href="#">Quiz</a>
-<a href="#">Additional Resources</a>
-<a href="https://youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 TBA</a>
+<a href="#"> 🎥 Additional Resources</a>
+<a href="#"> 🎥 Additional Resources</a>
 </div>
-<div class="card-parents"><span>Parents Resources (Share stories with your children):</span><a href="https://www.youtube.com/watch?v=M2DhHrifdzw"> A Conversation between God & Satan - Shaykh Azhar Nasser </a></div>
 </div>
-
+<div class="card-parents"><span>Parents Resources:</span></a><a href="https://al-islam.org/articles/taqlid-meaning-and-reality-sayyid-muhammad-rizvi"> Ijtihad and Taqlid [https://al-islam.org/]</a><a href="https://www.sistani.org/english/qa/"> Q & A [Grand Ayatollah Sayyid Ali al-Husayni al-Sistani (born 1930)]</a></div>
+</div>
+  
 <!-- WEEK 4 -->
 <div class="card">
 <div class="card-header">Term 1 - Week 4 · 28 Feb [10th Ramadan 1447] · Understanding Taharah and Najasah</div>
