--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 <div class="card">
 <div class="card-header">Term 1 - Week 2 · 14 Feb 2026 [25th Sha'ban 1447] · Taqlīd & Taklīf</div>
 <div class="card-top">
-<img src="Week2_Lesson2_Summary.png" class="card-logo" alt="Taqlīd & Taklīf">
+<img src="Tohzeeh.jpg" class="card-logo" alt="Taqlīd & Taklīf">
 <p class="card-text">Learn about <strong>Taqlīd</strong> and <strong>Taklīf</strong> and how to prepare spiritually for Ramadhan.</p>
 </div>
 <div class="card-links">
