--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 <div class="card">
 <div class="card-header">Term 1 - Week 1 · 7 Feb 2026 [18th Sha'ban 1447] · Imam al-Mahdi (AS)</div>
 <div class="card-top">
-<img src="Intidhar_AlMahdi.png" class="card-logo" alt="Al-Intizar">
+<img src="Intidhar.jpg" class="card-logo" alt="Al-Intizar">
 <p class="card-text">Learn about <strong>Al-Intidhar</strong>, the role of a true <strong>Muntadhir</strong>, and how to prepare for Imam al-Mahdi (AS).</p>
 </div>
 <div class="card-links">
 <a href="Active_Anticipation.pdf">Slides</a>
-<a href="Week1_Intedhar_Infographics.jpeg">Lesson Infographic</a>
+<a href="Intidhar_AlMahdi.png">Lesson Infographic</a>
 <a href="https://youtu.be/erjdUmeGgUA">🎥 Quick Revision</a>
 <a href="Imam_AlMahdi_Lesson1_8Feb26.pdf">Class Resources</a>
 <a href="https://forms.gle/UuRiBwHendDBb1bh7">Quiz</a>
