--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 <a href="Week2_Lesson2_Summary.png">Lesson Infographic</a>
 <a href="https://youtu.be/fbUw52fkS_o">🎥 Quick Revision</a>
 <a href="Ijtihad_Taklif_Lesson2_14Feb26.pdf">Class Resources</a>
-<a href="#">Quiz</a>
+<a href="https://forms.gle/cQ4aj6tZEQZnWsvh8">Quiz</a>
 <a href="https://al-islam.org/simplified-islamic-laws-youth-and-young-adults-sayyid-ali-hussaini-sistani/ijtihad-and-taqlid">Additional Resources</a>
 <a href="https://youtube.com/watch?v=gtOVyqpe0xM">🎥 Ijtihad and Taqleed</a>
 </div>
