--- a/index.html
+++ b/index.html
@@ -63,21 +63,17 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 <a href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age">Additional Resources</a>
 <a href="https://youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 Who is Imam Mahdi</a>
 </div>
-
 <div class="card-homework">
 <strong>Homework:</strong> Do not forget to complete pages <strong>378, 382, and 383</strong> from <strong>Book 7</strong> provided 
 (or visit the class website to access the soft copy).
-</div>
-</div>
-  
+</div>  
 <div class="card-parents">
 <span>Parents Resources (Share stories with your children):</span>
 <a href="https://youtu.be/a-ZVMdG8H5E?si=_VNCBVXznm4aXrQD">
 Imam Al-Mahdi (AS): Miraculous Birth of Imam Al-Mahdi (ajtf) Explained — Shaikh Azhar Nasser
 </a>
 <a href="https://youtu.be/InA6t_MdX94">
-Imam Al-Mahdi (AS): The Awaited Reality [Summarized lectures of Syed Abid Hussain Zaidi]
-</a>
+Imam Al-Mahdi (AS): The Awaited Reality [Summarized lectures of Syed Abid Hussain Zaidi]</a>
 </div>
 
 
