--- a/index.html
+++ b/index.html
@@ -48,15 +48,40 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
 
 <!-- WEEK 1 -->
 <div class="card">
-<div class="card-header">Term 1 - Week 1 · 7 Feb 2026 [18th Sha'ban 1447] · Imam al-Mahdi (AS)</div>
-<div class="card-top">
-<img src="Intidhar.jpg" class="card-logo" alt="Al-Intidhar">
-<p class="card-text">Learn about <strong>Al-Intidhar</strong>, the role of a true <strong>Muntadhir</strong>, and how to prepare for Imam al-Mahdi (AS).</p>
-</div>
+  <div class="card-header">
+    Term 1 - Week 1 · 7 Feb 2026 [18th Sha'ban 1447] · Imam al-Mahdi (AS)
+  </div>
 
-<!-- WEEK 1 --> <div class="card"> <div class="card-header">Term 1 - Week 1 · 7 Feb 2026 [18th Sha'ban 1447] · Imam al-Mahdi (AS)</div> <div class="card-top"> <img src="Intidhar.jpg" class="card-logo" alt="Al-Intidhar"> <p class="card-text">Learn about <strong>Al-Intidhar</strong>, the role of a true <strong>Muntadhir</strong>, and how to prepare for Imam al-Mahdi (AS).</p> </div> <div class="card-links"> <a href="Active_Anticipation.pdf">Slides</a> <a href="Intidhar_AlMahdi.png">Lesson Infographic</a> <a href="https://youtu.be/erjdUmeGgUA">🎥 Quick Revision</a> <a href="Imam_AlMahdi_Lesson1_8Feb26.pdf">Class Resources</a> <a href="https://forms.gle/UuRiBwHendDBb1bh7">Quiz</a> <a href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age">Additional Resources</a> <a href="https://youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 Who is Imam Mahdi</a> </div> <div class="card-parents"><span>Parents Resources (Share stories with your children):</span><a href="https://youtu.be/a-ZVMdG8H5E?si=_VNCBVXznm4aXrQD"> Imam Al-Mahdi (AS): Miraculous Birth of Imam Al-Mahdi (ajtf) Explained — Shaikh Azhar Nasser </a><a href="https://youtu.be/InA6t_MdX94"> Imam Al-Mahdi (AS): The Awaited Reality [Sumamarized lectures of Syed Abid Hussain Zaidi]</a></div> </div>
-  
-  
+  <div class="card-top">
+    <img src="Intidhar.jpg" class="card-logo" alt="Al-Intidhar">
+    <p class="card-text">
+      Learn about <strong>Al-Intidhar</strong>, the role of a true
+      <strong>Muntadhir</strong>, and how to prepare for Imam al-Mahdi (AS).
+    </p>
+  </div>
+
+  <div class="card-links">
+    <a href="Active_Anticipation.pdf">Slides</a>
+    <a href="Intidhar_AlMahdi.png">Lesson Infographic</a>
+    <a href="https://youtu.be/erjdUmeGgUA">🎥 Quick Revision</a>
+    <a href="Imam_AlMahdi_Lesson1_8Feb26.pdf">Class Resources</a>
+    <a href="https://forms.gle/UuRiBwHendDBb1bh7">Quiz</a>
+    <a href="https://al-islam.org/life-imam-al-mahdi-baqir-shareef-al-qurashi/time-and-venue-reappearance-his-eminence-master-age">
+      Additional Resources
+    </a>
+    <a href="https://youtube.com/watch?v=FZWwLWRZS3Y&t=7s">🎥 Who is Imam Mahdi</a>
+  </div>
+
+  <div class="card-parents">
+    <span>Parents Resources (Share stories with your children):</span>
+    <a href="https://youtu.be/a-ZVMdG8H5E?si=_VNCBVXznm4aXrQD">
+      Imam Al-Mahdi (AS): Miraculous Birth of Imam Al-Mahdi (ajtf) Explained — Shaikh Azhar Nasser
+    </a>
+    <a href="https://youtu.be/InA6t_MdX94">
+      Imam Al-Mahdi (AS): The Awaited Reality [Sumamarized lectures of Syed Abid Hussain Zaidi]
+    </a>
+  </div>
+</div>
 <div class="card-homework">
 <strong>Homework:</strong> Do not forget to complete pages <strong>378, 382, and 383</strong> from <strong>Book 7</strong> provided 
 (or visit the class website to access the soft copy).
