--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
     <img src="Intidhar.jpg" class="card-logo" alt="Al-Intidhar">
     <p class="card-text">
       Learn about <strong>Al-Intidhar</strong>, the role of a true
-      <strong>Muntadhir</strong>, and how to prepare for Imam al-Mahdi (AS).
+      <strong>Muntadhir</strong>, and how to prepare for Imam al-Mahdi (AS). 
+      <strong>Homework:</strong> Do not forget to complete pages <strong>378, 382, and 383</strong> from <strong>Book 7</strong> provided.
     </p>
   </div>
 
@@ -82,8 +83,7 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
     </a>
   </div>
 </div>
-
-
+  
 <!-- WEEK 2 -->
 <div class="card">
 <div class="card-header">Term 1 - Week 2 · 14 Feb 2026 [25th Sha'ban 1447] · Taqlīd & Taklīf</div>
