--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ main{max-width:1200px;margin:0 auto;padding:2rem 1.5rem 4rem}
     <p class="card-text">
       Learn about <strong>Al-Intidhar</strong>, the role of a true
       <strong>Muntadhir</strong>, and how to prepare for Imam al-Mahdi (AS). 
-      <strong>Homework:</strong> Do not forget to complete 
+      <u><strong>Homework:</strong></u> Do not forget to complete 
       pages <strong>378, 382, and 383</strong> from <strong>Book 7.</strong>
     </p>
   </div>
